# T4DT

./: .gitattributes  .gitignore  .gitmodules  README.md  TODO  requirements.txt  tsdf.py
cape_utils/: dataset_utils.py
configs/: 00032_longshort_flying_eagle.yaml  compress_full_scene.yaml
configs/compression/: tt_00032_longshort_flying_eagle.yaml  tt_compress_full_scene.yaml  tt_tucker_00032_longshort_flying_eagle.yaml  tucker_00032_longshort_flying_eagle.yaml
configs/metrics/: tt_tucker_00032_longshort_flying_eagle.yaml  tt_tucker_sgd_optimised_00032_longshort_flying_eagle.yaml
configs/sweeps/: oqtt_00032_longshort_flying_eagle_ranks.yaml  oqtt_crane_ranks.yaml  oqtt_handstand_ranks.yaml  oqtt_samba_ranks.yaml  oqtt_swing_ranks.yaml  qtt_00032_longshort_flying_eagle_high_ranks.yaml  qtt_00032_longshort_flying_eagle_high_ranks_high_thr.yaml  qtt_00032_longshort_flying_eagle_high_ranks_low_thr.yaml  tt_00032_longshort_flying_eagle_ranks.yaml  (+5 more)
evals/: Experimental.ipynb  Load and Vizualization.ipynb  plots.ipynb  qtt_00032_longshort_flying_eagle_learning.ipynb  qttnf.ipynb  tt_tucker_00032_longshort_flying_eagle.ipynb  tt_tucker_00032_longshort_flying_eagle_learning.ipynb
scripts/: compress_full_scene_bigmem.py  compress_scene_tt.py  compute_metrics.py  find_surface_adjacent_voxels.py  generate_ana_sdf.py  generate_cape_meshes.py  generate_cape_sdf.py  generate_meshes.py  sweep_ranks.py  sweep_ranks_ana.py  tensorize_scene.py  watertight_ana_meshes.py  watertight_cape_meshes.py
src/: CMakeLists.txt  metrics.cpp
t4dt/: metrics.py  t4dt.py  utils.py
(+1 files in other folders)
